# onedoc

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/skills/python-313-standard/: SKILL.md
.cursor/skills/python-313-standard/scripts/: validate.py
scripts/: deploy.sh  generate_architecture_pdf.py
src/medical_chat/: __init__.py  api.py  config.py  domain.py  guardrails.py  main.py  models.py  persistence.py  rate_limit.py  sanitization.py  statistics.py  storage.py  stream_hub.py  worker_pool.py
src/medical_chat/llm/: anthropic_client.py  base.py  factory.py  mock.py  openai_client.py
static/: index.html
tests/: test_api.py  test_coverage_extras.py  test_guardrails.py  test_sanitization.py
