[project]
name = "medical-expert-chat"
version = "0.1.0"
description = "Medical Expert AI Chat — async LLM worker service with HTTP API and simple UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "openai>=1.57.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0",
]

[project.scripts]
medical-chat = "medical_chat.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_chat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
